--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
+    "@angular/animations": "^8.2.2",
+    "@angular/cdk": "^8.1.2",
+    "@angular/material": "^8.1.2",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
