--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,10 @@
+# Handle line endings automatically for files detected as text and leave all files detected as binary untouched
+# Overwrites the local `core.autocrlf` settings, which ensures uniform behavior
+* text=auto
+
+# The above will handle all files NOT found below
+# These files are text and should be normalized (Convert crlf => lf)
+*.puml text linguist-language=AsciiDoc
+
+# Image formats
 *.png filter=lfs diff=lfs merge=lfs -text
